5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1646_2729.log
== TEST (2019-05-20 09:59:26) 
-- CODE:
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
produto = a * b
if(produdo % 2 == 0):
	print(a + b)
else:
	print(b - a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(produdo % 2 == 0):
NameError: name 'produdo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 09:59:51) 
-- CODE:
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
produto = a * b
if(produto % 2 == 0):
	print(a + b)
else:
	print(b - a)

-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 10:00:28) 
-- CODE:
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
produto = a * b
if(produto % 2 == 0):
	print(a + b)
else:
	print(b - a)

-- EXECUTION TIME:
0.197405
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
